--- a/my-app/index.ejs
+++ b/my-app/index.ejs
@@ -15,6 +15,8 @@
     <meta name="description" content="<%= htmlWebpackPlugin.options.description %>"/>
     <% } %>
 
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
     <% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
